[gd_scene load_steps=9 format=2]

[ext_resource path="res://libs/gt_menus/screens/__gt_simple_screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://libs/gt_pattern_label/gt_pattern_label.gd" type="Script" id=2]
[ext_resource path="res://menus/screens/screen_game_over.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/diffusion-bold-s64-o4.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/diffusion-bold-s32.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/ui/button_yellow_flat_color.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/ui/button_blue_flat_color.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/fonts/diffusion-bold-s32-o2.tres" type="DynamicFont" id=8]

[node name="screen_game_over" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="vbox" parent="." index="0"]
margin_left = -171.0
margin_top = -288.5
margin_right = 171.0
margin_bottom = 288.5

[node name="hbox" parent="vbox" index="0"]
margin_right = 342.0
margin_bottom = 577.0

[node name="vbox" parent="vbox/hbox" index="0"]
margin_right = 342.0
margin_bottom = 577.0
custom_constants/separation = 300

[node name="VBoxContainer" type="VBoxContainer" parent="vbox/hbox/vbox" index="0"]
margin_right = 342.0
margin_bottom = 126.0

[node name="game_over_label" type="Label" parent="vbox/hbox/vbox/VBoxContainer" index="0"]
margin_right = 342.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.945098, 0.94902, 0.854902, 1 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="score_label" type="Label" parent="vbox/hbox/vbox/VBoxContainer" index="1"]
margin_top = 85.0
margin_right = 342.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.945098, 0.94902, 0.854902, 1 )
text = "Score: 0"
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
pattern_text = "Score: %s"

[node name="buttons" type="VBoxContainer" parent="vbox/hbox/vbox" index="1"]
margin_top = 426.0
margin_right = 342.0
margin_bottom = 538.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="play_again_button" type="Button" parent="vbox/hbox/vbox/buttons" index="0"]
margin_right = 342.0
margin_bottom = 41.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0.188235, 0.231373, 1 )
custom_colors/font_color_hover = Color( 0.945098, 0.94902, 0.854902, 1 )
custom_colors/font_color_pressed = Color( 0.945098, 0.94902, 0.854902, 1 )
text = "play again"
__meta__ = {
"_edit_lock_": true
}

[node name="quit" type="Button" parent="vbox/hbox/vbox/buttons" index="1"]
margin_top = 71.0
margin_right = 342.0
margin_bottom = 112.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0.188235, 0.231373, 1 )
custom_colors/font_color_hover = Color( 0.945098, 0.94902, 0.854902, 1 )
custom_colors/font_color_pressed = Color( 0.945098, 0.94902, 0.854902, 1 )
text = "quit"
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="vbox/hbox/vbox/buttons/play_again_button" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="vbox/hbox/vbox/buttons/quit" to="." method="_on_quit_pressed"]
